Separate DTO Request and Response